--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -31,10 +31,8 @@ services:
       - "traefik.http.services.my-app.loadbalancer.server.port=${PORT:-4444}"
 
     healthcheck:
-      # IMPORTANT: Adjust healthcheck URL to match your app's health endpoint and port.
-      # If you don't have a /health endpoint, you might just check the root path:
-      # test: ["CMD", "curl", "-f", "http://localhost:${PORT:-4444}"]
-      test: ["CMD", "curl", "-f", "http://localhost:${PORT:-4444}/health"]
+      # This command now correctly checks the server's root path
+      test: ["CMD", "curl", "-f", "http://localhost:${PORT:-4444}/"]
       interval: 30s
       timeout: 10s
       retries: 3
